--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,58 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+
+:root{
+    --ticTacBorders: 3px solid black;
+}
+
+body {
+    display: grid;
+    height: 100vh;
+    grid-template-rows: 1fr 10fr;
+
+}
 .header {
     background-color: rgb(204, 202, 202);
     color: black;
     text-align: center;
+    padding: 10px;
+    flex-grow: 0;
 }
 
 .wrapper{
+    background-color: white;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.gameArea {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 500px;
+    min-height: 500px;
+    max-height: 80%;
+    background-color: rgb(180, 179, 179);
+}
+
+.middle {
+    border-top: var(--ticTacBorders);
+    border-bottom: var(--ticTacBorders);
+}
+
+.right {
+    border-left: var(--ticTacBorders);
+}
+
+.left {
+    border-right: var(--ticTacBorders);
+}
+
+.gameSpot {
+    /* height: 100px;
+    width: 100px; */
 }
